@@ -1,5 +1,11 @@
 2004-11-28  Matti Aarnio  <mea@zmailer.org>
 
+	* smtpserver/mxverify.c, transports/smtp/smtp.c,
+	  transports/smtp/getmxrr.c:
+	    IPv6 basic socket api specification update (RFC 3493)
+	    has obsoleted EAI_NODATA error codes, and FreeBSD 5.3
+	    has dropped it from headers...
+
 	* smtpserver/subdaemons.c, smtpserver/smtpserver.c,
 	  smtpserver/subdaemon-ctf.c, smtpserver/subdaemon-rtr.c,
 	  smtpserver/subdaemon-trk.c:
